[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sint-sdk"
version = "0.2.0"
description = "Python SDK for the SINT Protocol gateway"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "SINT Protocol"}]
keywords = ["sint", "robotics", "safety", "authorization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-httpx>=0.30", "mypy>=1"]

[tool.hatch.build.targets.wheel]
packages = ["sint"]

[tool.mypy]
strict = true
python_version = "3.10"
